--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Template for server",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jenny Viannay",
@@ -11,8 +12,10 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
+    "mysql": "^2.17.1",
     "nodemon": "^2.0.1"
   }
 }
